# compilers-project

./: .gitignore  .pep8  README.md  check.sh  mypy.ini  pyproject.toml
src/compiler/: ast.py  config.py  custom_token.py  helpers.py  tokenizer.py
tests/: tokenizer_test.py
